# Agentic-AI

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  pyproject.toml
dev/: DEVELOPMENT.md
notebooks/: explore.ipynb  introduction.ipynb  triagent.ipynb
src/TriAgent/: crew.py  main.py
src/TriAgent/config/: tasks.yaml
src/agentic_ai/: crew.py  main.py
