[project]
name = "TriAgent"
version = "0.0.1"
description = "Agentic-AI using crewAI"
authors = [{ name = "Zain", email = "nomani.zain@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai",
]

[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "pytest", "pre-commit", "nbstripout"]
notebooks=["jupyterlab", "jupyterlab_vim"]



[project.scripts]
TriAgent = "TriAgent.main:run"
run_crew = "TriAgent.main:run"
train = "TriAgent.main:train"
replay = "TriAgent.main:replay"
test = "TriAgent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = ["E", "F", "I", "B"]
lint.ignore = ["E501"]
fix = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]


